welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: identifier expected but integer literal found.
  var x = t[0]
            ^Array1:24: error: ']' expected but '}' found.
}
^